apps/vjencanja-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vjencanja-backend
  namespace: default
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: vjencanja-backend
  template:
    metadata:
      labels:
        app: vjencanja-backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: vjencanja-backend
          image: ghcr.io/fosleen/vjencanja-backend:latest
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 15
            failureThreshold: 3
